syntax = "proto3";

package ai.h2o.imagestore.v1;

import "ai/h2o/imagestore/v1/image.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";

// Service for managing images in the image storage.
service ImageService {
  // Creates a new image.
  rpc CreateImage(CreateImageRequest) returns (CreateImageResponse) {
    option (google.api.http) = {
      post: "/v1/images"
      body: "*"
    };
  }

  // Gets an image by name.
  // Returns image metadata and preview, but not the full image data.
  rpc GetImage(GetImageRequest) returns (GetImageResponse) {
    option (google.api.http) = {
      get: "/v1/{name=images/*}"
    };
  }

  // Lists images.
  // Returns image metadata and previews for each image.
  rpc ListImages(ListImagesRequest) returns (ListImagesResponse) {
    option (google.api.http) = {
      get: "/v1/images"
    };
  }

  // Deletes an image.
  rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse) {
    option (google.api.http) = {
      delete: "/v1/{name=images/*}"
    };
  }

  // Downloads the full image data.
  rpc DownloadImage(DownloadImageRequest) returns (DownloadImageResponse) {
    option (google.api.http) = {
      get: "/v1/{name=images/*}:download"
    };
  }
}

// Request message for CreateImage.
message CreateImageRequest {
  // The image to create.
  Image image = 1 [(google.api.field_behavior) = REQUIRED];
}

// Response message for CreateImage.
message CreateImageResponse {
  // The created image.
  Image image = 1;
}

// Request message for GetImage.
message GetImageRequest {
  // The resource name of the image to retrieve.
  // Format: `images/{image}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "imagestore.h2o.ai/Image"
    }
  ];
}

// Response message for GetImage.
message GetImageResponse {
  // The requested image.
  Image image = 1;
}

// Request message for ListImages.
message ListImagesRequest {
  // The maximum number of images to return.
  // The service may return fewer than this value.
  int32 page_size = 1;

  // A page token, received from a previous `ListImages` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 2;
}

// Response message for ListImages.
message ListImagesResponse {
  // The list of images.
  repeated Image images = 1;

  // A token to retrieve the next page of results.
  // Empty if there are no more results.
  string next_page_token = 2;
}

// Request message for DeleteImage.
message DeleteImageRequest {
  // The resource name of the image to delete.
  // Format: `images/{image}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "imagestore.h2o.ai/Image"
    }
  ];
}

// Response message for DeleteImage.
message DeleteImageResponse {}

// Request message for DownloadImage.
message DownloadImageRequest {
  // The resource name of the image to download.
  // Format: `images/{image}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "imagestore.h2o.ai/Image"
    }
  ];
}

// Response message for DownloadImage.
message DownloadImageResponse {
  // The raw image data.
  bytes data = 1;

  // The MIME type of the image.
  string mime_type = 2;
}